--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,37 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+KOTLIN_VERSION=1.3.61
+KOTLIN_CORE=1.1.0
+
+COMPILE_SDK_VERSION=29
+MIN_SDK_VERSION=21
+
+APPLICATION_ID=br.cericatto.testealoingressos
+TARGET_SDK_VERSION=29
+VERSION_CODE=1
+VERSION_NAME=1.0
+
+ANDROIDX_VERSION=1.1.0
+CONSTRAINT_LAYOUT_VERSION=2.0.0-alpha3
+CARD_VIEW_VERSION=1.0.0
+MATERIAL_VERSION=1.0.0
+
+RX_ANDROID_VERSION=2.1.1
+RX_KOTLIN_VERSION=2.4.0
+RX_JAVA_VERSION=2.2.12
+
+RETROFIT_VERSION=2.6.2
+ADAPTER_RX_JAVA_VERSION=2.6.2
+RX_BINDING_VERSION=1.0.1
+MOSHI_VERSION=2.6.2
+LOGGING_INTERCEPTOR_VERSION=4.2.0
+OKHTTP_VERSION=4.2.0
+
+TIMBER_VERSION=4.7.1
+GLIDE_VERSION=4.6.1
+
+JUNIT_VERSION=4.12
+JUNIT_EXT=1.1.1
+EXPRESSO_VERSION=3.2.0
