--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,12 +46,12 @@ dependencies {
     implementation "androidx.cardview:cardview:$CARD_VIEW_VERSION"
     implementation "com.google.android.material:material:$MATERIAL_VERSION"
 
-    // RX.
+    // RxJava2.
     implementation "io.reactivex.rxjava2:rxandroid:$RX_ANDROID_VERSION"
     implementation "io.reactivex.rxjava2:rxkotlin:$RX_KOTLIN_VERSION"
     implementation "io.reactivex.rxjava2:rxjava:$RX_JAVA_VERSION"
 
-    // RxJava2.
+    // RxJava2 with Retrofit.
     implementation "com.squareup.retrofit2:adapter-rxjava2:$ADAPTER_RX_JAVA_VERSION"
     implementation "com.jakewharton.rxbinding:rxbinding:$RX_BINDING_VERSION"
     implementation "com.squareup.okhttp3:logging-interceptor:$LOGGING_INTERCEPTOR_VERSION"
@@ -61,11 +61,10 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$MOSHI_VERSION"
     implementation "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
 
-    // Logging.
+    // Others.
     implementation "com.jakewharton.timber:timber:$TIMBER_VERSION"
-
-    // Glide.
     implementation "com.github.bumptech.glide:glide:$GLIDE_VERSION"
+    implementation "com.google.code.gson:gson:$GSON_VERSION"
 
     // Tests.
     testImplementation "junit:junit:$JUNIT_VERSION"
