--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,5 +31,14 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
+
+        <activity
+            android:name="br.android.cericatto.jobsity.view.activity.DetailsActivity"
+            android:parentActivityName="br.android.cericatto.jobsity.view.activity.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.android.cericatto.jobsity.view.activity.MainActivity" />
+        </activity>
     </application>
 </manifest>
