--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,21 @@
         </activity>
 
         <activity
-            android:name="br.android.cericatto.jobsity.view.activity.DetailsActivity"
+            android:name="br.android.cericatto.jobsity.view.activity.ShowDetailsActivity"
             android:parentActivityName="br.android.cericatto.jobsity.view.activity.MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="br.android.cericatto.jobsity.view.activity.MainActivity" />
+        </activity>
+
+        <activity
+            android:name="br.android.cericatto.jobsity.view.activity.ShowEpisodesActivity"
+            android:parentActivityName="br.android.cericatto.jobsity.view.activity.ShowDetailsActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="br.android.cericatto.jobsity.view.activity.ShowDetailsActivity" />
         </activity>
     </application>
 </manifest>
