--- a/gradle.properties
+++ b/gradle.properties
@@ -47,7 +47,7 @@ MOSHI_VERSION=2.6.2
 LOGGING_INTERCEPTOR_VERSION=4.2.0
 OKHTTP_VERSION=4.2.0
 
-ARCH_VERSION=1.1.0
+ANDROID_ARCH_VERSION=2.0.0
 TIMBER_VERSION=4.7.1
 GLIDE_VERSION=4.6.1
 GSON_VERSION=2.8.5
