--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
+        <!-- App Activity's -->
+
         <activity
-            android:name=".view.activity.MainActivity"
+            android:name=".view.activity.test.RetrofitShowsListActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
@@ -56,5 +58,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".view.activity.ShowDetailsActivity" />
         </activity>
+
+        <!-- Test Activity's -->
+
+<!--        <activity android:name=".view.activity.test.RetrofitShowsListActivity" />-->
+        <activity android:name=".view.activity.test.RetrofitSearchActivity" />
     </application>
 </manifest>
