--- a/gradle.properties
+++ b/gradle.properties
@@ -55,3 +55,7 @@ GSON_VERSION=2.8.5
 JUNIT_VERSION=4.12
 JUNIT_EXT=1.1.1
 EXPRESSO_VERSION=3.2.0
+
+OKHTTP_IDLING_RESOURCE_VERSION=1.0.0
+OKHTTP_MOCK_WEB_SERVER=4.2.0
+TEST_RULES_VERSION=1.1.1
