--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         <!-- App Activity's -->
 
         <activity
-            android:name=".view.activity.test.RetrofitShowsListActivity"
+            android:name=".view.activity.test.RetrofitSearchActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
@@ -61,7 +61,7 @@
 
         <!-- Test Activity's -->
 
-<!--        <activity android:name=".view.activity.test.RetrofitShowsListActivity" />-->
-        <activity android:name=".view.activity.test.RetrofitSearchActivity" />
+        <activity android:name=".view.activity.test.RetrofitShowsListActivity" />
+<!--        <activity android:name=".view.activity.test.RetrofitSearchActivity" />-->
     </application>
 </manifest>
