--- a/gradle.properties
+++ b/gradle.properties
@@ -59,3 +59,4 @@ EXPRESSO_VERSION=3.2.0
 OKHTTP_IDLING_RESOURCE_VERSION=1.0.0
 OKHTTP_MOCK_WEB_SERVER=4.2.0
 TEST_RULES_VERSION=1.1.1
+ARCH_CORE_TESTING_VERSION=2.0.0
