--- a/gradle.properties
+++ b/gradle.properties
@@ -56,6 +56,7 @@ JUNIT_VERSION=4.12
 JUNIT_EXT=1.1.1
 EXPRESSO_VERSION=3.2.0
 
+COROUTINES_VERSION=1.3.1
 OKHTTP_IDLING_RESOURCE_VERSION=1.0.0
 OKHTTP_MOCK_WEB_SERVER=4.2.0
 TEST_RULES_VERSION=1.1.1
