Menu favorite option implemented. - Now the app allows the user to browse their favorite series in alphabetical order. - And also allows to click on one to see its details.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$ANDROID_ARCH_VERSION"
     kapt "androidx.lifecycle:lifecycle-compiler:$ANDROID_ARCH_VERSION"
     kapt "androidx.room:room-compiler:$ANDROID_ARCH_VERSION"
+    implementation "androidx.room:room-rxjava2:$ANDROID_ARCH_VERSION"
 
     // ----- Others -----
 //    implementation "android.arch.lifecycle:extensions:$ARCH_VERSION"
